qicharts2 0.7.1.9999
===============
* Fixed bug in plotting categorical (character) subgroups.
* Prime charts (pp and up) now handle categorical subgroups (funnel plots).

qicharts2 0.7.1
===============
* qic() gained EXPERIMENTAL method argument.
* Fixed broken link in vignette.
* Fixed limits in S charts using freeze argument (thanks to dirkse).
* Fixed part argument with subgrouped data (thanks to Nathan Proudlove),

qicharts2 0.6.1
===============
* Fixing a warning caused by a recent update to geom_ribbon()
* Fixed missing options when package not loaded.
* New EXPERIMENTAL function, bchart() for Bernoulli CUSUM charts for rare events.
* The part argument now accepts a character vector identifying and labelling chart parts.

qicharts2 0.6.0
===============
* Allow NULL as title argument in paretochart (thanks to Andrew Hill).
* Fix c4() for large n (thanks to pwildenhain for the bug report and Tore Wenzel-Larsen for the fix).
* Hide line labels for Inf values.
* Fix baseline centre line in G charts (when using freeze argument).
* Fix error when x.period argument is NULL (thanks to lenakba). 

qicharts2 0.5.1
===============
* Fix missing target line.
* Use exact values for control chart constants A3, B3, and B4 (thanks to Tore Wenzel-Larsen).
* Add x.period argument specifying interval cut points for aggregating y values by week, month, etc. (thanks to pwildenhain).
* P charts default to percentage on Y axis (thanks to pwildehain).
* Add qic.linecol, qic.signalcol, and qic.targetcol to options to allow for custom colours.
* Add qic.clshade to options to allow for choosing between lines and shaded area for control limits.
* Fix typos in vignette (thanks to rmadillo).
* Add source to cabg and gtt datasets.

qicharts2 0.4.0
===============
* Fix quoted variables.
* Darker CL background.
* Add point.size argument.
* Improved notes and parts labels.

qicharts2 0.3.0
===============
* Skip more tests that generate noLD issues on CRAN.