@@ -2,6 +2,7 @@ qicharts2 0.7.1.9999
 ===============
 * Fixed bug in plotting categorical (character) subgroups.
 * Prime charts (pp and up) now handle categorical subgroups (funnel plots).
+* qic() gained y.percent.accuracy argument.
 
 qicharts2 0.7.1
 ===============
